# template-python-ml

./: .pre-commit-config.yaml  Makefile  README.md  init.py  pyproject.toml
data/: README.md
src/project_name/: __main__.py  cli.py  core.py
tests/: test_base.py
tools/: example.py
